[tool.poetry]
name = "mlwatch"
version = "0.1.0"
description = "AI/ML Observability Tool"
authors = ["J-Raghavan"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
ruff = "*"
black = "*"
pytest = "*"
mypy = "*"
isort = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.ruff]
line-length = 88
target-version = "py39"
extend-select = ["E", "F"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
